# tree-sitter-bitbake

./: .npmignore  CHANGELOG.md  Cargo.toml  Package.swift  README.md  binding.gyp  grammar.js  package.json  python.js
.github/workflows/: ci.yml  fuzz.yml  release.yml
bindings/node/: binding.cc  index.js
bindings/rust/: README.md  lib.rs
bindings/swift/TreeSitterBitBake/: bitbake.h
examples/: 3.1.1.bb  3.1.10.bb  3.1.11.bb  3.1.12.bb  3.1.13.bb  3.1.14.bb  3.1.15.bb  3.1.16.bb  3.1.3.bb  3.1.4.bb  3.1.5.bb  3.1.6.bb  3.1.7.bb  3.1.8.bb  3.1.9.bb  3.10.1.bb  3.10.2.bb  3.10.3.bb  3.10.4.bb  3.10.5.bb  3.2.bb  3.3.1.bb  3.3.2.bb  3.3.3.bb  3.4.2.bb  3.4.3.bb  3.4.4.bb  3.4.5.bb  3.5.1.bb  3.5.2.bb  3.5.3.bb  3.5.5.bb  3.5.6.bb  3.6.1.bb  3.6.2.bb  3.6.3.bb  3.8.bb
queries/: highlights.scm
script/: known_failures.txt  parse-examples
src/: grammar.json  node-types.json  parser.c  scanner.c
