[package]
name = "tree-sitter-bitbake"
description = "BitBake grammar for tree-sitter"
version = "1.0.1"
authors = ["Amaan Qureshi <amaanq12@gmail.com>"]
license = "MIT"
readme = "bindings/rust/README.md"
keywords = ["incremental", "parsing", "bitbake"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/amaanq/tree-sitter-bitbake"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "~0.20.10"

[build-dependencies]
cc = "~1.0.82"
